mostly implemented new chat desgign on mobile, still need to figure out issues with spacing between divs

--- a/static/css/reading.css
+++ b/static/css/reading.css
@@ -5,6 +5,16 @@
     --card-horizontal-space: 100px;
 }
 
+.card-header {
+    border-bottom: none;
+    background-color: transparent;
+}
+
+.card-footer {
+    border-top: none;
+    background-color:var(--bs-card-cap-bg);
+}
+
 main {
     height: 55%;
     display: flex;
@@ -19,12 +29,12 @@ main {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 13vh;
+    height: 10vh;
     background-color: rgba(242, 231, 231, 0.226);
     border-radius: 10px;
     color: white;
-    margin-bottom: 20px;
-    margin-top: 2vh;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
 
 .back-button-container {
@@ -54,7 +64,7 @@ main {
 
 .badge {
     font-weight: 400;
-}   
+}
 
 .card-container {
     position: relative;
@@ -68,6 +78,9 @@ main {
         "a a a";
     justify-items: center;
     z-index: 1;
+    background-color: rgba(242, 231, 231, 0.226);
+    border-radius: 10px;
+    padding-top:15px;
 }
 
 .card-pos-a {
@@ -167,6 +180,16 @@ main {
     justify-content: space-between;
     align-items: center;
 }
+.white-layer {
+    border-radius: 10px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(242, 231, 231, 0.226);
+    z-index: 2;
+}
 
 .chatbot {
     background: linear-gradient(90deg, rgb(187, 137, 137) 0%, rgb(165, 65, 228) 100%);
@@ -174,22 +197,42 @@ main {
     bottom: 0;
     color: black;
     text-align: center;
-    border: 1px solid rgba(255, 255, 255, 0.267);
+    border: none;
     border-radius: 10px;
-    width: 100vw;
+    /* width: 100vw; */
     z-index: 10;
+    margin-right: 10px;
+    margin-bottom: 10px;
 }
 
-.chatbot .card-header {
-    /* height: 8%; */
+.fa-angle-down{
+    vertical-align: middle;
 }
-
 
 .chatbot .card-body {
     overflow-y: scroll;
-    height: 25vh;
+    height: 19vh;
     width: 100%;
+    z-index: 2;
 }
+
+.minimize-button, .collapse, .show {
+    z-index: 2;
+
+}
+
+.collapse:not(.show) {
+    display: block;
+    width: auto;
+    height: 0px;
+    visibility: hidden;
+}
+
+.minimize-button:active {
+    transform: rotate(180deg);
+}
+
+
 
 #typingGIF {
     height: 50px;
@@ -202,7 +245,8 @@ main {
     background-color: rgba(245, 222, 179, 0.547);
     border-radius: 40px;
     margin-left: 20%;
-    padding:20px;
+    padding: 20px;
+    z-index: 2;
 
 }
 
@@ -211,7 +255,8 @@ main {
     background-color: rgba(245, 179, 224, 0.547);
     border-radius: 40px;
     margin-right: 20%;
-    padding:20px;
+    padding: 20px;
+
 }
 
 
@@ -233,8 +278,14 @@ main {
 }
 
 .form-control {
-    border: 1px solid rgb(0, 0, 0);
+    border: 1px solid rgb(255, 255, 255);
     border-radius: 5px;
+    background: transparent;
+    z-index: 2;
+
+}
+
+.form-control:focus {
     background: transparent;
 }
 
@@ -261,7 +312,11 @@ main {
 }
 
 /* Medium devices (tablets, 768px and up) */
-@media (min-width: 768px) {}
+@media (min-width: 768px) {
+    .img-fluid {
+        max-width: 80%;
+    }
+}
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) {
@@ -270,23 +325,34 @@ main {
         position: fixed;
         margin-bottom: 10px; */
     }
+
     .chatbot {
         background: rgba(242, 231, 231, 0.226);
         position: relative;
+        /* bottom: none; */
         width: 100%;
-        border:none;
+        border: none;
         height: 80vh;
     }
+    .white-layer {
+        display: none;
+    }
+
     .chatbot .card-body {
         height: 70vh;
     }
+
     .chatbot .card-header {
         height: 60px;
         align-items: center;
     }
+
     .chatbot .card-footer {
-        height: 60px;
-    }
+        bottom: 0;
+        position: absolute;
+        width: 100%;
+    } 
+
     .card-container {
         height: 80vh;
         background-color: rgba(242, 231, 231, 0.226);
@@ -309,11 +375,12 @@ main {
     .minimize-button {
         display: none;
     }
-    .img-fluid{
+
+    .img-fluid {
         max-width: 80%;
     }
 
-    .selected-card{
+    .selected-card {
         margin-left: 0px;
         /* position: fixed; */
         float: right;
@@ -326,7 +393,7 @@ main {
 
 /* XX-Large devices (larger desktops, 1400px and up) */
 @media (min-width: 1400px) {
-    .img-fluid{
+    .img-fluid {
         max-width: 80%;
     }
 }
